Fix parabolas page JavaScript loading and navigation issues
- Fixed navigation links in all HTML files (changed ../index.html to index.html)
- Resolved JavaScript conflict by backing up conflicting app-new.js file
- Added console logging to app.js for debugging
- Added cache-busting parameter to parabolas.html script tag
- Created comprehensive fix.md documentation for future reference
- Parabolas page now loads D3.js/SVG visualizations correctly

--- a/angels.html
+++ b/angels.html
@@ -11,7 +11,7 @@
 <body>
     <div id="app">
         <nav>
-            <a href="../index.html" class="home-link">← Back to Home</a>
+            <a href="index.html" class="home-link">← Back to Home</a>
         </nav>
         <header>
             <h1>👼 Angels Project</h1>
