--- a/ellipses.html
+++ b/ellipses.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <nav>
-            <a href="../index.html" class="home-link">← Back to Home</a>
+            <a href="index.html" class="home-link">← Back to Home</a>
         </nav>
         <h1>⭕ Ellipses & Lattice Intersections</h1>
         <div style="text-align: center; padding: 60px 20px; color: #666;">
