--- a/parabolas.html
+++ b/parabolas.html
@@ -7,12 +7,12 @@
     <!-- TODO: Parabolas are currently outside the view range and need to be corrected -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="js/app.js" defer></script>
+    <script src="js/app.js?v=2" defer></script>
 </head>
 <body>
     <div id="app">
         <nav>
-            <a href="../index.html" class="home-link">← Back to Home</a>
+            <a href="index.html" class="home-link">← Back to Home</a>
         </nav>
         <h1>Parabolas & Lattice Intersections</h1>
         <div id="loadingIndicator" style="text-align: center; padding: 20px; color: #666; font-style: italic;">
