feat: Add Tailwind CSS styles and configuration for Conics Explorer  - Implement main CSS file with Tailwind CSS for styling components and print optimization. - Define typography, navigation, conic section cards, mathematical grid, and assembly workspace styles. - Add responsive utilities and accessibility improvements. - Create custom utilities for mathematical formulas and print-specific styles.  feat: Introduce TypeScript types for Conics Explorer  - Define interfaces for geometric types, conic sections, assembly system, and motif library. - Include types for mathematical operations, rendering options, and event handling. - Establish configuration and error handling types for improved type safety.  feat: Develop mathematical utilities for Conics Explorer  - Implement precision utilities for lattice intersection validation and mathematical operations. - Create coordinate transformation methods for SVG rendering. - Add conic label utilities and color scheme management.  chore: Configure Tailwind CSS and Vite for project setup  - Set up Tailwind CSS configuration with custom colors, typography, and responsive utilities. - Configure Vite for building and serving the application with multiple entry points. - Establish TypeScript configuration for strict type checking and path mapping.

--- a/parabolas.html
+++ b/parabolas.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parabolas - Conics Explorer</title>
+    <!-- CONIC PLAN REFERENCE: This file implements Phase 1 (Foundation) for parabola visualization
+         Core implementation of "Mathematical Precision" and "Integer Lattice Points" from "Why Conics?" section.
+         Parabolas are fundamental to AI-driven shape generation and provide smooth connection capabilities. -->
+         
     <!-- TODO: Parabolas are currently outside the view range and need to be corrected -->
     <!-- The current scaling and coordinate system needs adjustment to properly display the parabolas within the visible viewport -->
     <!-- ATTEMPTED FIX: Implemented adaptive coordinate system based on parameter 'a', but parabolas still not displaying properly -->
